remove Wiggle.graph: one way to author a workflow
The by-name builder is gone. Wiggle.define is the only entry point, and
GraphBuilder, Workflow, Branch, Case, ForkStage and ForEachStage are now
package-private -- they survive as what define() compiles *through*, not as a
surface anyone writes against.

166 call sites moved across 61 files. Most were mechanical, and the three things
that were not are worth recording.

**Step names changed shape.** A step is now named after the method it
references, so a node that was "book-air" is "bookAir". Handlers are unaffected
-- binding folds punctuation -- but anything asserting on a name had to follow,
including a gated instance's terminationReason and the arm keys the engine
stages fork results under.

**Two capabilities only graph had.** Both are restored rather than lost:

  - A single-armed choice. oneOf required two arms; choose never did, and one
    guarded arm is a real shape ("run this, or skip past it"). The arity check is
    relaxed and the junction now resolves for one arm, where it previously fell
    through to the root and reported the arm as unguarded.
  - A fan-out joins once. GraphBuilder's ForkStage rejected a second combine; the
    typed stages assigned straight to the field, so a second silently won. The
    check moved to Plan.Fork, which all ten stages funnel through.

**Generated topologies are gone, by choice.** Benchmark and WorkerPacingTest
built pipelines in a loop over generated names, so length was a parameter. A step
is named by reference now, so both declare a fixed set of hops (32 and 10) and
reject a longer request outright. That is the agreed trade: no by-name escape
hatch, even though the javadoc on WiggleFlow.task promised a thenApply(String,
Class) that never existed -- that promise is removed too.

Scenarios, the conformance suite, moved with everything else. Its nested-fork
handler had to be renamed: its steps were called ia/ib/or and wrote context keys
of the same names, which was h